# pcc

./: CMakeLists.txt  CompilerConfig.cfg  CompilerConfig.hpp  README.md  check.sh  main.cpp  set.sh
inc/: Asm.hpp  CompileTimeFunctions.hpp  Expr.hpp  Node.hpp  Parser.hpp  Runtime-functions.hpp  Scanner.hpp  Stmt.hpp  Sym.hpp
src/: Asm.cpp  CMakeLists.txt  ConstCalculation.cpp  Expr.cpp  Parser.cpp  ParserDecl.cpp  ParserExpr.cpp  ParserStmt.cpp  Scanner.cpp  Stmt.cpp  Sym.cpp  TypeChecker.cpp
test/: 000.out  002.in  003.out  004.in  006.out  007.in  008.in  010.in  010.out  012.in  014.out  017.out  018.in  018.out  019.in  020.out  022.out  023.in  023.out  024.out  025.in  1.in  1.out  2.in  2.out  3.out  4.out  5.out  7.in  7.out  8.in  8.out  9.in  9.out
test/parse-expression/: 000.out  005.out  006.out  008.out  010.in  011.out  014.in  014.out  015.out  016.out  020.out  021.out  022.in  022.out  023.in  025.in  026.in  026.out  027.in  027.out  028.out  029.in  030.out  033.in  033.out  036.in  036.out  037.out  038.out  039.in  039.out  040.in  040.out  042.in  043.in  043.out  044.out  045.out  046.in  046.out  (+7 more)
test/parser/: 000.out  001.out  002.in  002.out  003.in  003.out  004.in  004.out  005.out  006.out  007.in  007.out  008.in  008.out  009.in  009.out  010.in  010.out  011.in  011.out  012.in  012.out  013.in  014.in  014.out  015.in  015.out  016.in  016.out  017.in  017.out  018.in  018.out  019.out  020.in  020.out  021.in  021.out  022.in  022.out  (+183 more)
test/scanner/: 001.in  001.out  002.out  003.out  004.out  (+28 more)
tmp/: parser.cpp  scanner.cpp
